solved minor issues: - added heading to start & end shift - removed nextjs dev inidcator in the bottom left - removed duplicate fare in RideSUmmaryModal

--- a/apps/frontend/components/Modal/Modal.module.css
+++ b/apps/frontend/components/Modal/Modal.module.css
@@ -38,10 +38,3 @@
 .button_close:hover {
     color: var(--color-on-surface);
 }
-
-.heading {
-    margin-bottom: var(--padding-md);
-    font-size: 24px;
-    font-weight: 600;
-    line-height: 100%;
-}
